# flipper-mfkey-desktop

./: .gitmodules  README.md  pyproject.toml
src/mfkey_desktop/flipper/pb/: application_pb2.pyi  desktop_pb2.py  desktop_pb2.pyi  flipper_pb2.py  gpio_pb2.py  gui_pb2.py  gui_pb2.pyi  storage_pb2.py
src/mfkey_desktop/flipper_pb/: __init__.pyi  application_pb2.py  flipper_pb2.pyi  gpio_pb2.pyi  property_pb2.py  property_pb2.pyi  storage_pb2.pyi  system_pb2.py  system_pb2.pyi
